# creative-loop

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ENVIRONMENT_MATRIX.md  FIRST_RUN.md  IMPLEMENTATION_PLAN.md  OPERATIONS_RUNBOOK.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  render.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: config.py  db.py  deps.py  main.py
apps/api/app/models/: __init__.py  analysis.py  approval.py  audit.py  checks.py  creative.py  creative_asset.py  credential.py  decision.py  evaluation.py  experiment.py  hypothesis.py  learning.py  meta_sync.py  product.py  prompt.py  publication.py  publish.py  source_ad.py  suggestion.py  user.py  variant_metric.py
apps/api/app/routers/: analyses.py  approvals.py  assets.py  auth.py  brand.py  creatives.py  experiments.py  integrations.py  learnings.py  metrics.py  products.py  prompt_versions.py  prompts.py  publish.py  reports.py  source_ads.py  sync.py
apps/api/app/schemas/: common.py  experiment.py  learning.py  publish.py  report.py  suggestion.py
apps/api/app/security/: fernet.py  jwt.py
apps/api/app/services/: analysis_service.py  creative_service.py  decision_service.py  dedup.py  derivative_service.py  evaluation_service.py  experiment_service.py  learning_service.py  meta_import.py  metric_collection_service.py  next_round_service.py  prompt_service.py  publication_guards.py  publication_service.py  report_service.py  retrieval_service.py
apps/api/app/worker/: celery_app.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_activation_flow.py  test_analysis_flow.py  test_approval_flow.py  test_auth.py  test_creative_flow_p4.py  test_dry_run.py  test_emergency_pause.py  test_experiment_flow.py  test_meta_sync.py  test_org_isolation.py  test_prompt_versioning.py  test_publication_flow.py  test_publish_real_flow.py  test_vertical_flow.py
apps/api/tests/unit/: test_aggregator.py  test_analysis_schema.py  test_anthropic_mock.py  test_audit_no_secrets.py  test_config.py  test_dedup.py  (+27 more)
(+62 files in other folders)
