[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creative-loop-api"
version = "0.7.0"
description = "Creative Loop API — Phases 1–7"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    # Security
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # Async utilities
    "anyio>=4.3.0",
    # Logging
    "structlog>=24.1.0",
    # Imaging (mock provider + quality CV checks)
    "Pillow>=10.3.0",
    "imagehash>=4.3.0",
    "numpy>=1.26.0",
    "boto3>=1.34.0",
    # Worker
    "celery[redis]>=5.4.0",
    # Anthropic SDK (stub for Phase 1)
    "anthropic>=0.28.0",
    # OpenAI SDK (stub for Phase 1)
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-passlib",
    "types-python-jose",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
# "../.." = repo root — makes `packages.*` importable without PYTHONPATH hacks
where = [".", "../.."]
include = ["app", "app.*", "packages", "packages.*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "E402", "B008", "B904", "SIM105", "SIM115"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app/tests"]
